feat: Implement "Record emotion after meditation" and history view with full refactor
- Added HTML structure, CSS styling, and JavaScript logic for emotion recording modal.
- Implemented saving of emotion words to browser's localStorage with timestamps.
- Added a feature to view recorded emotions as a list in a history modal.
- Ensured all new and existing texts are localized using the languageData object.
- Corrected the placeholder text for Korean emotion input.
- Refactored entire JavaScript block to ensure all functions are correctly defined and event listeners are properly attached, fixing previous issues.

--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
             font-size: 20px;
             color: var(--primary-color);
             margin: 30px 0 20px 0;
+            word-break: keep-all; /* 모바일에서 한국어 줄바꿈 개선 */
         }
 
         #view-emotions-button {
