--- a/index.html
+++ b/index.html
@@ -549,6 +549,8 @@
         }
 
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7786922431786772"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 
